<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SymptomChecker">

    <EditText
        android:id="@+id/symptomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/enter_symptoms_here"
        android:inputType="text" />

    <Button
        android:id="@+id/checkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/symptomEditText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="134dp"
        android:text="@string/check_symptoms" />

    <TextView
        android:id="@+id/resultsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkButton"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/results_will_appear_here"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>


